# oracle

./: callback.py  config.py  forecasts.json  handlers.py  keyboard.py  main.py  prediction.py  pyproject.toml  requirements.txt
forecast_bot/: LICENSE  handlers.py  keyboard.py  main.py  prediction.py  requirements.txt
